--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/eauction_db
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 #spring.jpa.show-sql: true
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-message=always
