HTTPS/SSL implemented

--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
+
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-alias=auction-key
+server.ssl.key-store=src/main/resources/keystore.p12
+server.ssl.key-store-password=auction
+server.ssl.key-store-type=PKCS12
+
+
