--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 #spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.open-in-view=false
 #spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
