--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/eauction_db
-spring.datasource.username=root
-spring.datasource.password=Kostopoulos1@
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 #spring.jpa.show-sql: true
@@ -15,7 +15,7 @@ server.error.include-message=always
 server.port=8443
 server.ssl.enabled=true
 server.ssl.key-alias=auction-key
-server.ssl.key-store=app/target/classes/keystore.p12
+server.ssl.key-store=backend/app/src/main/resources/keystore.p12
 server.ssl.key-store-password=auction
 server.ssl.key-store-type=PKCS12
 
