--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.error.include-message=always
 server.port=8443
 server.ssl.enabled=true
 server.ssl.key-alias=auction-key
-server.ssl.key-store=backend/app/src/main/resources/keystore.p12
+server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=auction
 server.ssl.key-store-type=PKCS12
 
