JWT fixed-no ssl

--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -15,11 +15,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 server.error.include-message=always
 
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-alias=auction-key
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=auction
-server.ssl.key-store-type=PKCS12
+#server.port=8443
+#server.ssl.enabled=true
+#server.ssl.key-alias=auction-key
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=auction
+#server.ssl.key-store-type=PKCS12
 
 
