--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -4,14 +4,22 @@ spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 #spring.jpa.hibernate.ddl-auto=create-drop
+
+
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql: true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLMyISAMDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#spring.sql.init.schema-locations=classpath:data/import.sql
+#spring.batch.jdbc.initialize-schema=always
+#
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
 
 server.error.include-message=always
 
