--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -30,4 +30,7 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=auction
 server.ssl.key-store-type=PKCS12
 
+#spring.data.web.pageable.size-parameter=size
+#spring.data.web.pageable.page-parameter=page
+
 
