--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/eauction_db
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 spring.jpa.open-in-view=true
@@ -12,12 +12,9 @@ spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql: true
 #spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLMyISAMDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-#spring.sql.init.schema-locations=classpath:data/import.sql
 #spring.batch.jdbc.initialize-schema=always
-#
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
 
@@ -29,8 +26,5 @@ server.ssl.key-alias=auction-key
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=auction
 server.ssl.key-store-type=PKCS12
-
-#spring.data.web.pageable.size-parameter=size
-#spring.data.web.pageable.page-parameter=page
 
 
