--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/eauction_db
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 spring.jpa.open-in-view=true
@@ -13,6 +13,7 @@ spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql: true
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #spring.batch.jdbc.initialize-schema=always
 #spring.jpa.defer-datasource-initialization=true
