--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/eauction_db
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=eauction_admin
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 spring.jpa.open-in-view=true
